clarified the click event for artdiv from anywhere in the div to only the image, and fixed a problem with enlarged artdivs overlapping with the displayed output by adjusting output's z-index

--- a/art/css/index.css
+++ b/art/css/index.css
@@ -126,6 +126,7 @@ div {
   margin-left: 2.5vw;
   width: 95%;
   position: absolute;
+  z-index: 10;
 }
 
 #output img {
